--- a/requirements.txt
+++ b/requirements.txt
@@ -4,27 +4,37 @@ annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
 attrs==23.2.0
+blis==0.7.11
 Brotli==1.1.0
+catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpathlib==0.16.0
+confection==0.1.4
+cymem==2.0.8
 dataclasses-json==0.6.6
 dnspython==2.6.1
 duckduckgo_search==5.3.1b1
 email_validator==2.1.1
 exceptiongroup==1.2.1
+faiss-cpu==1.8.0
 fastapi==0.111.0
 fastapi-cli==0.0.3
+filelock==3.14.0
 frozenlist==1.4.1
+fsspec==2024.5.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
+huggingface-hub==0.23.0
 hyperframe==6.0.1
 idna==3.7
 Jinja2==3.1.4
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.22.0
@@ -33,18 +43,26 @@ langchain==0.1.20
 langchain-community==0.0.38
 langchain-core==0.1.52
 langchain-text-splitters==0.0.2
+langcodes==3.4.0
 langgraph==0.0.49
 langserve==0.2.0
 langsmith==0.1.59
+language_data==1.2.0
+marisa-trie==1.1.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.2
 mdurl==0.1.2
+mpmath==1.3.0
 multidict==6.0.5
+murmurhash==1.0.10
 mypy-extensions==1.0.0
+networkx==3.3
 numpy==1.26.4
 orjson==3.10.3
 packaging==23.2
+pillow==10.3.0
+preshed==3.0.9
 pydantic==2.7.1
 pydantic_core==2.18.2
 Pygments==2.18.0
@@ -54,24 +72,43 @@ python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
 referencing==0.35.1
+regex==2024.5.15
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.1
+safetensors==0.4.3
+scikit-learn==1.4.2
+scipy==1.13.0
+sentence-transformers==2.7.0
 shellingham==1.5.4
+smart-open==6.4.0
 sniffio==1.3.1
 socksio==1.0.0
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==2.0.30
+srsly==2.4.8
 sse-starlette==2.1.0
 starlette==0.37.2
+sympy==1.12
 tenacity==8.3.0
+thinc==8.2.3
+threadpoolctl==3.5.0
+tokenizers==0.19.1
 toml==0.10.2
-typer==0.12.3
+torch==2.3.0
+tqdm==4.66.4
+transformers==4.41.0
+typer==0.9.4
 typing-inspect==0.9.0
 typing_extensions==4.11.0
 ujson==5.10.0
 urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
+wasabi==1.1.2
 watchfiles==0.21.0
+weasel==0.3.4
 websockets==12.0
 yarl==1.9.4
