--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,13 +2,27 @@ aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.3.0
+asgiref==3.8.1
 async-timeout==4.0.3
 attrs==23.2.0
+backoff==2.2.1
+bcrypt==4.1.3
+blis==0.7.11
 Brotli==1.1.0
+build==1.2.1
+cachetools==5.3.3
+catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
+chroma-hnswlib==0.7.3
+chromadb==0.5.0
 click==8.1.7
+cloudpathlib==0.16.0
+coloredlogs==15.0.1
+confection==0.1.4
+cymem==2.0.8
 dataclasses-json==0.6.6
+Deprecated==1.2.14
 dnspython==2.6.1
 duckduckgo_search==5.3.1b1
 email_validator==2.1.1
@@ -16,8 +30,12 @@ exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.3
 filelock==3.14.0
+flatbuffers==24.3.25
 frozenlist==1.4.1
 fsspec==2024.5.0
+google-auth==2.29.0
+googleapis-common-protos==1.63.0
+grpcio==1.63.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
@@ -25,61 +43,105 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.23.0
+humanfriendly==10.0
 hyperframe==6.0.1
 idna==3.7
+importlib-metadata==7.0.0
+importlib_resources==6.4.0
+isodate==0.6.1
 Jinja2==3.1.4
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
-langchain==0.1.20
-langchain-community==0.0.38
-langchain-core==0.1.52
-langchain-text-splitters==0.0.2
+kubernetes==29.0.0
+langchain==0.2.1
+langchain-community==0.2.1
+langchain-core==0.2.1
+langchain-text-splitters==0.2.0
+langcodes==3.4.0
 langgraph==0.0.49
 langserve==0.2.0
 langsmith==0.1.59
+language_data==1.2.0
+marisa-trie==1.1.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.2
 mdurl==0.1.2
+mmh3==4.1.0
+monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
+murmurhash==1.0.10
 mypy-extensions==1.0.0
 networkx==3.3
 numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.18.0
+opentelemetry-api==1.24.0
+opentelemetry-exporter-otlp-proto-common==1.24.0
+opentelemetry-exporter-otlp-proto-grpc==1.24.0
+opentelemetry-instrumentation==0.45b0
+opentelemetry-instrumentation-asgi==0.45b0
+opentelemetry-instrumentation-fastapi==0.45b0
+opentelemetry-proto==1.24.0
+opentelemetry-sdk==1.24.0
+opentelemetry-semantic-conventions==0.45b0
+opentelemetry-util-http==0.45b0
 orjson==3.10.3
+overrides==7.7.0
 packaging==23.2
 pillow==10.3.0
+posthog==3.5.0
+preshed==3.0.9
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.7.1
 pydantic_core==2.18.2
 Pygments==2.18.0
+pyparsing==3.1.2
+PyPika==0.48.9
 pyproject-toml==0.0.10
+pyproject_hooks==1.1.0
 pyreqwest_impersonate==0.4.5
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+rdflib==7.0.0
 referencing==0.35.1
 regex==2024.5.15
 requests==2.31.0
+requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.18.1
+rsa==4.9
 safetensors==0.4.3
 scikit-learn==1.4.2
 scipy==1.13.0
 sentence-transformers==2.7.0
 shellingham==1.5.4
+six==1.16.0
+smart-open==6.4.0
 sniffio==1.3.1
 socksio==1.0.0
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==2.0.30
+srsly==2.4.8
 sse-starlette==2.1.0
 starlette==0.37.2
 sympy==1.12
 tenacity==8.3.0
+thinc==8.2.3
 threadpoolctl==3.5.0
 tokenizers==0.19.1
 toml==0.10.2
+tomli==2.0.1
 torch==2.3.0
 tqdm==4.66.4
 transformers==4.41.0
@@ -90,6 +152,11 @@ ujson==5.10.0
 urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
+wasabi==1.1.2
 watchfiles==0.21.0
+weasel==0.3.4
+websocket-client==1.8.0
 websockets==12.0
+wrapt==1.16.0
 yarl==1.9.4
+zipp==3.18.2
